 * Fix video recorder not working when game audio was disabled
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Fix /hta, /hsa and /hya commands not writing message in chat
 * Limit hedgehog health to 268435455 to prevent some bugs

Frontend:
 * Controllers are detected again
 * No longer allow having schemes with equal names (case-insensitive)
 * Lobby/room: No longer allow opening context menu if no player selected

Highlander:
 * Fix all hogs receiving a free teleport after hog placement phase

TechRacer:
 * Fix rare bug causing crates and other objects to not appear on start of turn

Continental supplies:
 + Continents are now selected before the game starts
 + Continents give hog different start health
 + Add Antarctica special: Upside-Down World (teleport to top of map)
 + Major rewrite of ALL texts for better usability
 + Add custom weapon tooltips
 + Improve audiovisual effects
 + Show message when hog receives new continent ammo
 + Sabotaged hedgehogs also emit smoke when it's not their turn
 + Can switch continent in reverse order with [Precise]+[Switch]
 * Invulnerability now protects from sabotage damage
 * Sabotage kills hog instantly when health reaches 0
 * Reliably prevent using of Lonely Cries and baseball bat specials when usage not allowed
 * Don't explode Anno 1302, Medicine and Bouncy Boomerang if drowning
 * Don't play “Missed” and “Laugh” taunt when those don't make sense
 * Fix retreat timer not turning red for some weapons

Space Invasion:
 + Display round score in a separate row
 + Keep round score displayed after round ends, remove round score announcer message
 * Fix rare Lua error message spam at end of game
 * Fix round score and other info numbers messing up after screen resize
 * Fix kamikaze bonus not being shown

Campaigns and missions:
 * A Classic Fairytale: Fix clan membership of princess in some missions